# django-orm-performance-enhancers

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tox.ini
demo_proj/conf/: asgi.py  settings.py  urls.py  wsgi.py
demo_proj/data_models/: apps.py  models.py
demo_proj/data_models/migrations/: 0001_initial.py
demo_proj/tests/: test_descriptors.py  test_mixins.py  test_utils.py
django_orm_performance_enhancers/: __about__.py  __init__.py  descriptors.py  evaluation_callbacks.py  querysets.py  select_related_hack.py  utils.py
